<resources>
    <string name="app_name">Home</string>

    <string name="user_name">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="or">O iniciar sesión con</string>
    <string name="new_user_then_sign_up">Crear una cuenta</string>
    <string name="password_forgotten">Recuperar contraseña</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="twitter">Twitter</string>
    <string name="google_revoke">Google revoke</string>

    <string name="facebook_app_id">YOUR FACEBOOK APP ID HERE</string>
    <string name="action_settings">Settings</string>

    <string name="action_label_refresh">Refresh</string>
    <string name="action_label_search">Search</string>
    <string name="action_label_both">Both</string>
    <string name="action_label_text">Text</string>
    <string name="action_label_logo">Logo</string>
    <string name="action_label_up">Up</string>
    <string name="action_label_nav_tabs">Tabs</string>
    <string name="action_label_nav_drop_down">List</string>
    <string name="action_label_nav_label">Label</string>
    <string name="action_label_nav">Navigation Mode &gt;</string>
    <string name="action_label_bak">Action Bar Background &gt;</string>
    <string name="action_label_bak_none">None</string>
    <string name="action_label_bak_gradient">Gradient</string>
    <string name="action_label_bak_image">Image</string>
</resources>
